--- a/css/travel-item/travel-item.css
+++ b/css/travel-item/travel-item.css
@@ -128,16 +128,18 @@ section.main-right {
   width: 40%;
   margin-left: 30px;
   background-color: white;
-  height: 500px;
-  border: 1px solid #e9e9e9;
   display: flex;
-  box-shadow: -1px -1px 9px silver;
+  position: relative;
 }
 
 section.main-right .main-detail {
   padding: 20px;
   width: 100%;
   position: relative;
+  height: 500px;
+  border: 1px solid #e9e9e9;
+  box-shadow: -1px -1px 9px silver;
+  box-sizing: border-box;
 }
 
 section.main-right .main-detail h2 {
