--- a/css/homepage/main.css
+++ b/css/homepage/main.css
@@ -67,6 +67,7 @@ section .brand-features blockquote {
   font-size: 14px;
   text-align: center;
   margin-bottom: 50px;
+  line-height: 1.6;
 }
 
 /* 行程分類 */
