--- a/css/homepage/main.css
+++ b/css/homepage/main.css
@@ -65,7 +65,7 @@ section .brand-features figcaption {
 
 section .brand-features blockquote {
   font-size: 14px;
-  text-align: center;
+  text-align: left;
   margin-bottom: 50px;
   line-height: 1.6;
 }
