--- a/css/homepage/common.css
+++ b/css/homepage/common.css
@@ -92,6 +92,10 @@ nav li a {
   font-size: 20px;
 }
 
+nav .main-nav li .cool-link:hover {
+  color: #e01356;
+}
+
 nav .login {
   height: 100%;
   padding: 0 25px;
