--- a/css/homepage/main.css
+++ b/css/homepage/main.css
@@ -556,3 +556,256 @@ section.follow-us ul img {
 section.follow-us li:hover {
   transform: scale(1.1, 1.1);
 }
+
+/* RWD */
+
+@media screen and (max-width: 767px) {
+  main {
+    width: 100%;
+  }
+
+  section .brand-features {
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+
+  section .brand-features li {
+    width: 80%;
+    margin-bottom: 50px;
+  }
+
+  section .brand-features li figure {
+    text-align: center;
+  }
+
+  section .brand-features li figure img {
+    width: 230px;
+  }
+
+  section .brand-features blockquote {
+    width: 50%;
+    margin: 0 auto;
+  }
+
+  section .travel-category {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  section .travel-category li {
+    width: 100%;
+    border-radius: 0;
+  }
+
+  section .travel-category a {
+    border-radius: 0;
+  }
+
+  section .travel-category a div {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  section .travel-list {
+    justify-content: center;
+  }
+
+  section .hot-travel-list {
+    width: 100%;
+    /* margin: 102px auto 0; */
+  }
+
+  section#shopping-flow .wrap {
+    flex-direction: column;
+  }
+
+  section#shopping-flow .title {
+    margin: 70px 0 40px;
+  }
+
+  section#shopping-flow .wrap ul {
+    margin-top: 50px;
+    width: 100%;
+    margin: 0 auto;
+  }
+
+  section#shopping-flow .wrap li {
+    width: 70%;
+    margin: 0 auto;
+  }
+
+  section.follow-us .title a {
+    top: 120%;
+    right: 30px;
+  }
+
+  section.follow-us ul {
+    width: 90%;
+    margin-top: 100px;
+  }
+
+  section.follow-us ul li {
+    width: 49%;
+    height: auto;
+  }
+
+  section.follow-us .title img {
+    display: block;
+  }
+
+  section.hot-schedule {
+    width: 100%;
+    /* height: 3900px; */
+    height: auto;
+  }
+
+  .travel-list li:hover {
+    margin-top: 0;
+  }
+
+  section .title img {
+    display: none;
+  }
+
+  section .title {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
+  section.hot-travel .title {
+    margin: 30px 0 20px;
+  }
+}
+
+@media screen and (max-width: 645px) {
+  section .hot-travel-list {
+    width: 100%;
+    justify-content: center;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1199px) {
+  main {
+    width: 100%;
+  }
+
+  section .brand-features {
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+
+  section .brand-features li {
+    width: 80%;
+    margin-bottom: 50px;
+  }
+
+  section .brand-features li figure {
+    text-align: center;
+  }
+
+  section .brand-features li figure img {
+    width: 230px;
+  }
+
+  section .brand-features blockquote {
+    width: 50%;
+    margin: 0 auto;
+  }
+
+  section .travel-category {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  section .travel-category li {
+    width: 100%;
+    border-radius: 0;
+  }
+
+  section .travel-category a {
+    border-radius: 0;
+  }
+
+  section .travel-category a div {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  section .travel-list {
+    justify-content: space-evenly;
+  }
+
+  section .hot-travel-list {
+    margin: 102px auto 0;
+    justify-content: space-evenly;
+  }
+
+  section#shopping-flow .wrap {
+    flex-direction: column;
+  }
+
+  section#shopping-flow .title {
+    margin: 70px 0 40px;
+  }
+
+  section#shopping-flow .wrap ul {
+    margin-top: 50px;
+    width: 100%;
+    margin: 0 auto;
+  }
+
+  section#shopping-flow .wrap li {
+    width: 70%;
+    margin: 0 auto;
+  }
+
+  section.follow-us .title a {
+    top: 120%;
+    right: 30px;
+  }
+
+  section.follow-us ul {
+    width: 90%;
+    margin-top: 100px;
+  }
+
+  section.follow-us ul li {
+    width: 49%;
+    height: auto;
+  }
+
+  section.follow-us .title img {
+    display: block;
+  }
+
+  section.hot-schedule {
+    width: 100%;
+    /* height: 3900px; */
+    height: auto;
+  }
+
+  .travel-list li:hover {
+    margin-top: 0;
+  }
+
+  section .title img {
+    display: none;
+  }
+
+  section .title {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
+  section.hot-travel .title {
+    margin: 30px 0 20px;
+  }
+}
