--- a/css/auckland/auckland.css
+++ b/css/auckland/auckland.css
@@ -16,7 +16,7 @@ main {
 div.breadscrumb {
   height: 50px;
   margin-top: 10px;
-  padding-left: 105px;
+  padding-left: 40px;
 }
 
 div.breadscrumb .breadscrumb-list img {
@@ -331,4 +331,112 @@ section.follow-us ul img {
 
 section.follow-us li:hover {
   transform: scale(1.1, 1.1);
+}
+
+@media screen and (max-width: 1199px) {
+  main {
+    width: 100%;
+  }
+
+  div.wrap {
+    display: none;
+  }
+
+  div.wrap-rwd {
+    width: 100%;
+    height: auto;
+  }
+
+  div.wrap-rwd .item {
+    width: 80%;
+    height: auto;
+    margin: 0 auto;
+  }
+
+  div.wrap-rwd .item .picture {
+    width: 100%;
+    margin-top: 20px;
+  }
+
+  div.wrap-rwd .item .text p {
+    padding: 10px 30px;
+  }
+
+  div.wrap-rwd .item .text {
+    margin-top: 10px;
+  }
+
+  div.wrap-rwd .item img {
+    width: 100%;
+  }
+
+  section.hot-schedule {
+    width: 100%;
+    height: auto;
+  }
+
+  section.follow-us {
+    width: 100%;
+  }
+
+  section.follow-us ul {
+    width: 100%;
+    height: auto;
+  }
+
+  section.follow-us .title a {
+    top: 120%;
+    right: 30px;
+  }
+
+  section.follow-us ul {
+    width: 90%;
+    margin-top: 100px;
+  }
+
+  section.follow-us ul li {
+    width: 49%;
+    height: auto;
+  }
+
+  section.follow-us .title img {
+    display: block;
+  }
+
+  section.hot-schedule {
+    width: 100%;
+    height: auto;
+  }
+
+  .travel-list li:hover {
+    margin-top: 0;
+  }
+
+  section .title img {
+    display: none;
+  }
+
+  section .title {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
+  section.hot-travel .title {
+    margin: 30px 0 20px;
+  }
+
+  section .travel-list {
+    justify-content: space-evenly;
+  }
+
+  section .hot-travel-list {
+    margin: 102px auto 0;
+    justify-content: space-evenly;
+  }
+}
+
+@media (max-width: 768px) {
+  .main-banner {
+    height: 200px;
+  }
 }
