--- a/css/contact-us/contact-us.css
+++ b/css/contact-us/contact-us.css
@@ -178,3 +178,50 @@ section.right-section .contact-me img {
 section.right-section .contact-me {
   align-items: center;
 }
+
+@media (max-width: 768px) {
+  .main-banner {
+    height: 200px;
+  }
+}
+
+@media (max-width: 990px) {
+  main {
+    width: 100%;
+  }
+
+  div.main-wrap {
+    width: 100%;
+  }
+
+  div.main-wrap .flex-wrap {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  section.right-section {
+    order: -1;
+    width: 80%;
+    margin: 0;
+  }
+
+  div.top-wrap p {
+    width: 89%;
+    padding: 0 20px;
+  }
+
+  section.right-section div.map {
+    width: 100%;
+  }
+
+  section.right-section div.map iframe {
+    width: 100%;
+    height: 230px;
+    margin-bottom: 30px;
+  }
+
+  section.left-section {
+    margin: 0;
+    width: 80%;
+  }
+}
