--- a/css/faq/faq.css
+++ b/css/faq/faq.css
@@ -159,3 +159,40 @@ div.wrap .section-right li p {
 #other-item {
   display: none;
 }
+
+@media screen and (max-width: 1099px) {
+  main {
+    width: 100%;
+  }
+
+  div.wrap {
+    flex-direction: column;
+  }
+
+  div.wrap .section-left {
+    width: 70%;
+    height: auto;
+    margin: 0 auto;
+    margin-top: 50px;
+  }
+
+  div.wrap .section-left ul {
+    display: flex;
+    flex-wrap: wrap;
+    width: 70%;
+  }
+
+  div.wrap .section-right {
+    width: 100%;
+  }
+
+  div.title-block p {
+    padding: 10px 20px;
+  }
+}
+
+@media (max-width: 768px) {
+  .main-banner {
+    height: 200px;
+  }
+}
