--- a/css/homepage/main.css
+++ b/css/homepage/main.css
@@ -623,6 +623,11 @@ section.follow-us li:hover {
     flex-direction: column;
   }
 
+  section#shopping-flow .wrap .thumbnail {
+    width: 100%;
+    height: auto;
+  }
+
   section#shopping-flow .title {
     margin: 70px 0 40px;
   }
@@ -788,7 +793,6 @@ section.follow-us li:hover {
 
   section.hot-schedule {
     width: 100%;
-    /* height: 3900px; */
     height: auto;
   }
 
@@ -807,5 +811,11 @@ section.follow-us li:hover {
 
   section.hot-travel .title {
     margin: 30px 0 20px;
+  }
+}
+
+@media (max-width: 768px) {
+  .main-banner {
+    height: 200px;
   }
 }
