--- a/css/travel-category/travel-category.css
+++ b/css/travel-category/travel-category.css
@@ -459,6 +459,7 @@ section.follow-us li:hover {
     margin-top: 50px;
     margin-right: 30px;
     margin-left: 30px;
+    width: 90%;
   }
 
   div.content p:first-child {
@@ -467,7 +468,7 @@ section.follow-us li:hover {
 
   section.hot-schedule {
     height: auto;
-    margin-top: 400px;
+    margin-top: 350px;
   }
 
   section.hot-schedule div.last {
